--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -3,6 +3,10 @@ version: v1
 plugins:
   - name: go
     out: gen/go
+    opt:
+      - paths=source_relative
 
   - name: go-grpc
     out: gen/go
+    opt:
+      - paths=source_relative
